# VulkanMemoryAllocator-Hpp

./: .gitmodules  CMakeLists.txt  Generate.java  README.md  Update.java
CppModule/: CMakeLists.txt  modules-example.cpp
include/: vk_mem_alloc.hpp  vk_mem_alloc_funcs.hpp  vk_mem_alloc_handles.hpp  vk_mem_alloc_structs.hpp
src/: vk_mem_alloc.cppm
